--- a/style.css
+++ b/style.css
@@ -29,9 +29,10 @@ body {
 	line-height: 1;
     background-image: url(./images/bg-desktop-dark.jpg);
     background-position: top;
-    background-size: cover;
+    background-size: contain;
     background-repeat: no-repeat;
     background-color: #1e1e2c;
+    height: 100vh;
 }
 ol, ul {
 	list-style: none;
@@ -98,4 +99,21 @@ table {
 }
 .submit-button:hover{
     background-color: #809df4;
+}
+.list-container {
+    list-style-image: url(./images/icon-check.svg);
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding-inline: 10%;
+}
+li {
+    padding-block-start: 2%;
+    padding-block-end: 2%;
+}
+span {
+    margin-left: 5%;
+}
+.checked {
+    text-decoration: line-through;
 }
